Internal folder for utils

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,19 +72,19 @@
      <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoTriggerEvent.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Internal\IsoComponentAction.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Internal\IsoFSMEvents.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollider.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeObject.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeRigidbody.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\IsoPhysicHelper.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\IsoUtils.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoBoxCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollision.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoContactPoint.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoFakeCollider.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoFakeObject.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoFakeRigidbody.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoObject.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoPhysicHelper.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoRaycastHit.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoRigidbody.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoSphereCollider.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoUtils.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoWorld.cs" />
      <Compile Include="Assets\PlayMaker\Actions\ActivateGameObject.cs" />
      <Compile Include="Assets\PlayMaker\Actions\AddAnimationClip.cs" />
