--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,11 +63,13 @@
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTilePosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTouchIsoPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTouchIsoTilePosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetVelocity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetWorldProps.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoResize.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMode.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetSize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetVelocity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetWorldProps.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoTranslate.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoCollisionEvent.cs" />
