New PlayMaker actions: IsoSetDrag, IsoGetDrag, IsoSetMass, IsoGetMass, IsoIsKinematic, IsoIsSleeping, IsoSleep

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,8 @@
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoAddForce.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoConvertIsometricToScreen.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoConvertScreenToIsometric.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetDrag.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMass.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMode.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMouseIsoPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMouseIsoTilePosition.cs" />
@@ -66,13 +68,20 @@
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTouchIsoTilePosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetVelocity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetWorldProps.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsKinematic.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsSleeping.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoResize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetDrag.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMass.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMode.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetSize.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetVelocity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetWorldProps.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSleep.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoTranslate.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoUseGravity.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoWakeUp.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoCollisionEvent.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoTriggerEvent.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Internal\IsoComponentAction.cs" />
