--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,17 +70,19 @@
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetWorldProps.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsKinematic.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsSleeping.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoIsUseGravity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoResize.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetDrag.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetIsKinematic.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMass.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMode.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetSize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetUseGravity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetVelocity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetWorldProps.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSleep.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoTranslate.cs" />
-     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoUseGravity.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoWakeUp.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoCollisionEvent.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Events\IsoTriggerEvent.cs" />
