--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,11 +64,11 @@
      <Compile Include="Assets\IsoTools\Scripts\IsoRaycastHit.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoRigidbody.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoSphereCollider.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoTile.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoTileLayer.cs" />
-     <Compile Include="Assets\IsoTools\Scripts\IsoTileMap.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoWorld.cs" />
+     <Compile Include="Assets\IsoTools\Tiled\TiledMap.cs" />
      <Compile Include="Assets\IsoTools\Tiled\TiledMapAsset.cs" />
+     <Compile Include="Assets\IsoTools\Tiled\TiledMapLayer.cs" />
+     <Compile Include="Assets\IsoTools\Tiled\TiledMapTile.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
