begin physic events optimization

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,19 +54,23 @@
      <Compile Include="Assets\IsoTools\Examples\Scripts\SceneController.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoAssocList.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollider.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollisionListener.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeObject.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeRigidbody.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeTriggerListener.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoList.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoPhysicHelper.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoUtils.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoBoxCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollision.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\IsoCollisionListener.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoContactPoint.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoObject.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoRaycastHit.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoRigidbody.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoSphereCollider.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\IsoTriggerListener.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoWorld.cs" />
      <Compile Include="Assets\IsoTools\Tiled\TiledMap.cs" />
      <Compile Include="Assets\IsoTools\Tiled\TiledMapAsset.cs" />
