--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\IsoTools\Examples\Scripts\CubeAutoMovement.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\RaycastDestroyer.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\SceneController.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoAssocList.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollider.cs" />
