--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,11 +47,11 @@
   <ItemGroup>
      <Compile Include="Assets\IsoTools\Examples\Scripts\AlienBallController.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\AlienBallSpawner.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\AlienDestroyer.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\CircleFly.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\CubeAutoMovement.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\RaycastDestroyer.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\SceneController.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoAssocList.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollider.cs" />
