--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\IsoTools\Scripts\Internal\Editor\IsoObjectEditor.cs" />
+     <Compile Include="Assets\IsoTools\Scripts\Internal\Editor\IsoSnappingParentEditor.cs" />
      <Compile Include="Assets\IsoTools\Tiled\Internal\Editor\TiledMapAssetEditor.cs" />
      <Compile Include="Assets\IsoTools\Tiled\Internal\Editor\TiledMapAssetPostprocessor.cs" />
      <Compile Include="Assets\IsoTools\Tiled\Internal\Editor\TiledMapEditor.cs" />
