example script to separate folders

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -87,14 +87,14 @@
      <Compile Include="Assets\IsoTools\Addons\Tiled\TiledMapLayer.cs" />
      <Compile Include="Assets\IsoTools\Addons\Tiled\TiledMapProperties.cs" />
      <Compile Include="Assets\IsoTools\Addons\Tiled\TiledMapTileset.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\AlienBallController.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\AlienBallSpawner.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\AlienDestroyer.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\CircleFly.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\CubeAutoMovement.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\Kenney\AlienBallController.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\Kenney\AlienBallSpawner.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\Kenney\AlienDestroyer.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\Kenney\PhysicEchoListener.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\Kenney\PlayerController.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\SceneController.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\Simple\CircleFly.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\Simple\CubeAutoMovement.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoAssocList.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\IsoFakeCollisionListener.cs" />
