--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -54,8 +54,10 @@
      <Compile Include="Assets\IsoTools\Scripts\Internal\Editor\IsoObjectEditor.cs" />
      <Compile Include="Assets\IsoTools\Scripts\Internal\Editor\IsoSnappingParentEditor.cs" />
      <None Include="Assets\IsoTools\Examples\Images\Dragosha\adventure-tileset\spritesheet.xml" />
+     <None Include="Assets\IsoTools\Examples\Images\Dragosha\licence.txt" />
      <None Include="Assets\IsoTools\Docs\CHANGELOG.txt" />
      <None Include="Assets\IsoTools\Docs\README.txt" />
+     <None Include="Assets\IsoTools\Examples\Images\Kenney\licence.txt" />
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
