--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ iso-tools.sln
 iso-tools.userprefs
 Assembly-CSharp.csproj
 Assembly-CSharp-Editor.csproj
+unity-iso-tools.sln
+unity-iso-tools.userprefs
